# nsrllookup

./: Makefile.am  Makefile.in  cross-compile-win32  cross-compile-win64
src/: common.cc  common.hpp  nsrllookup.cc  parse_options.cc  query_server.cc  unix.hpp  win32.hpp
